[package]
name = "recipes"
version = "0.1.0"
authors = ["kaga <zhanghailin1995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "recipes-ttcp"
path = "src/bin/ttcp.rs"

[[bin]]
name = "recipes-echo"
path = "src/bin/echo.rs"

[[bin]]
name = "recipes-echo-client"
path = "src/bin/echo_client.rs"

[[bin]]
name = "recipes-rt-udp"
path = "src/bin/roundtrip_udp.rs"

[[bin]]
name = "recipes-netcat"
path = "src/bin/netcat.rs"

[[bin]]
name = "memcached-footprint"
path = "src/bin/memcached_footprint.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = "2.33.3"
bytes = "1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.8"
lpfs = "0.2.0"

[profile.release]
# Unoptimized debug builds are too slow to profile
# having debug info doesn't hurt perf for now
debug = 1