[package]
name = "recipes"
version = "0.1.0"
authors = ["kaga <zhanghailin1995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "recipes-ttcp"
path = "src/bin/ttcp.rs"

[[bin]]
name = "recipes-echo"
path = "src/bin/echo.rs"

[[bin]]
name = "recipes-echo-client"
path = "src/bin/echo_client.rs"

[[bin]]
name = "recipes-rt-udp"
path = "src/bin/roundtrip_udp.rs"

[[bin]]
name = "recipes-netcat"
path = "src/bin/netcat.rs"

[[bin]]
name = "memcached-footprint"
path = "src/bin/memcached_footprint.rs"

[[bin]]
name = "rs-procmon"
path = "src/bin/procmon.rs"

[[bin]]
name = "sudoku-server"
path = "src/bin/sudoku/sudoku_server.rs"

[[bin]]
name = "sudoku-server-basic"
path = "src/bin/sudoku/sudoku_server_basic.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
clap = "2.33.3"
bytes = "1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.8"
lpfs = "0.2.0"
actix-web = "3"
libc = "0.2"
rlimit = "0.5.4"
thiserror = "1"
cxx = "1.0"
subslice = "0.2.2"
lazy_static = "1.4.0"
threadpool = "1.8.1"
jemallocator = "0.3.2"

[build-dependencies]
cxx-build = "1.0"
# [profile.release]
#Unoptimized debug builds are too slow to profile
#having debug info doesn't hurt perf for now
# debug = true